--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ main {
 
 .book-form {
   width: 75%;
-  height: 300px;
-  /* height: 80vh; */
+  /* min-height: 100vh; */
+  height: 45%;
   background-color: #303030;
   margin: 0 auto;
 }
