--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
   color: var(--text-colour);
 }
 
+/*! ------------------[LAYOUT]------------------ */
+
 .background_img {
   height: 100dvh;
   width: 100dvw;
@@ -60,72 +62,111 @@
   );
 }
 
+/*! ------------------[HEADER]------------------ */
+
 header {
-  outline: 2px solid red;
   grid-row: 1;
-  padding: 1rem 2rem;
+  padding: 0.5rem 2rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
+/*! ------------------[MAIN]------------------ */
 
 main {
   outline: 2px solid blue;
   grid-row: 2;
   padding: 1rem 2rem;
   height: 100%;
+
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .add_book_btn {
-  margin-top: 1rem;
-  padding: 0.6rem 1rem;
+  grid-row: 2;
+  place-self: center;
+
+  margin: 1rem;
+  padding: 1rem 1rem;
+  line-height: 0;
+  width: 100px;
+  height: 20%;
+  text-align: center;
 }
+
+/*? ------------------[MAIN-BOOK-DISPLAY]------------------ */
+
+.book-display {
+  grid-row: 1;
+  border: 1px solid red;
+  height: 100%;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  gap: 0.5rem;
+}
+
+.book-card {
+  /* outline: 1px solid gray;
+  width: 25%;
+  height: 45%; */
+}
+
+/*? ------------------[MAIN-DIALOG]------------------ */
 
 :modal {
   background-color: #ffffff;
 
-  width: clamp(300px, 70%, 700px);
+  width: clamp(350px, 70%, 700px);
   /* min-height: 100vh; */
   height: 65%;
   overflow-y: auto;
 
-  padding: 2rem;
+  padding: 2.2rem;
 
   margin: 5rem auto;
   border: none;
   border-radius: 15px;
+
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
+
+.book_form::backdrop {
+  backdrop-filter: blur(3px);
+}
+
+/*? ------------------[MAIN-FORM]------------------ */
 
 form {
   display: grid;
-
-  grid-template-rows: repeat(6, auto);
-}
-
-.dialog-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  margin-bottom: 2rem;
-}
-
-.dialog-header button {
-  align-self: flex-start;
-
-  position: relative;
-  bottom: 1rem;
-  left: 1rem;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: repeat(8, auto);
 }
 
 .form_title {
-  font-size: 2.2rem;
-  width: 58.5%;
+  font-size: clamp(1.2rem, 1.2rem + 2vw, 2.2rem);
+  width: 61%;
 
   text-align: center;
+  /* margin-bottom: 2rem; */
+
+  /* grid-row: 2; */
+  /* padding-bottom: 2rem;
+  padding-top: 2rem; */
 }
 
 .form_row {
   grid-column: 1;
   grid-row: 2 span 5;
-  padding: 0.8rem;
+  padding: 0.4rem;
   /* outline: 1px solid red; */
   width: 70%;
 
@@ -144,7 +185,7 @@ form {
 
   /* width: 100px; */
   vertical-align: top;
-  font-size: 1.2rem;
+  font-size: clamp(0.75rem, 0.75rem + 1vw, 1.4rem);
   font-weight: 600;
 }
 
@@ -190,15 +231,25 @@ input[type="checkbox"] {
   bottom: 2px;
 }
 
-.close_btn {
-  height: 25px;
+/*? ------------------[MAIN-FORM-BUTTONS]------------------ */
 
-  /* margin-top: 0.8rem; */
+.close_btn {
+  height: 30px;
+  width: 30px;
+  padding: 0.18rem;
+  border: none;
+  outline: none;
+  background-color: #ffffff;
+
+  cursor: pointer;
+  /* outline: 1px solid red; */
+
+  grid-column: 2;
 }
 
 .btn_container {
   grid-column: 1;
-  grid-row: 6;
+  grid-row: 7;
 
   display: flex;
   align-items: center;
@@ -215,16 +266,9 @@ input[type="checkbox"] {
   min-width: 3rem;
 }
 
-.book_form::backdrop {
-  backdrop-filter: blur(3px);
-}
-
-p {
-  margin-top: 12rem;
-}
+/*! ------------------[FOOTER]------------------ */
 
 footer {
-  outline: 2px solid green;
   grid-row: 3;
   padding: 1rem 2rem;
 }
