--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ main {
 
   width: clamp(350px, 70%, 700px);
   /* min-height: 100vh; */
-  height: 65%;
+  height: fit-content;
   overflow-y: auto;
 
   padding: 2.2rem;
@@ -311,16 +311,21 @@ input[type="checkbox"] {
   flex-direction: row-reverse;
   align-items: center;
   justify-content: flex-end;
-  gap: 0.2rem;
+  /* gap: 0.2rem; */
 }
 
 .star_container a {
   text-decoration: none;
 }
 
+/* .star {
+  padding: 3px;
+} */
+
 .star svg {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  padding: 3px;
 }
 
 .star path {
