--- a/style.css
+++ b/style.css
@@ -114,8 +114,8 @@ main {
   grid-row: 1;
 
   display: grid;
-  /* grid-template-columns: repeat(3, minmax(200px, 0.5fr)); */
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(3, minmax(200px, 0.5fr));
+  /* grid-template-columns: 1fr; */
   grid-auto-rows: auto;
   gap: 0.5rem;
   align-content: start;
